[gd_scene load_steps=7 format=3 uid="uid://ejxktduquwyt"]

[ext_resource type="Script" path="res://scenes/game_over_scene.gd" id="1_of2wk"]
[ext_resource type="Texture2D" uid="uid://xi1ahek1qv0n" path="res://assets/gameOverScreen.png" id="1_ve61i"]
[ext_resource type="AudioStream" uid="uid://bv4p0nbckbeun" path="res://sounds/toco3.mp3" id="3_xo47l"]
[ext_resource type="AudioStream" uid="uid://cm5wgxbyc8yyc" path="res://sounds/toco4.mp3" id="4_ona88"]
[ext_resource type="AudioStream" uid="uid://lqrmm1a1qkkl" path="res://sounds/toco2.mp3" id="5_qswp1"]
[ext_resource type="AudioStream" uid="uid://ckxbjjj30grdp" path="res://sounds/Kevin MacLeod - 8bit Dungeon Boss_01.mp3" id="6_6sgn8"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_of2wk")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(954.778, 536.5)
scale = Vector2(0.603889, 0.603889)
texture = ExtResource("1_ve61i")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="toucan1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xo47l")

[node name="toucan2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ona88")

[node name="toucan3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_qswp1")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6sgn8")
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
